--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "crypto": "0.0.3",
     "ejs": "2.3.4",
+    "express-validator": "2.21.0",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
@@ -16,12 +18,13 @@
     "grunt-contrib-less": "1.3.0",
     "grunt-contrib-uglify": "1.0.1",
     "grunt-contrib-watch": "1.0.0",
-    "grunt-sails-linker": "~0.10.1",
+    "grunt-sails-linker": "0.10.1",
     "grunt-sync": "0.5.2",
-    "include-all": "^1.0.0",
+    "include-all": "1.0.0",
+    "pg": "6.1.0",
     "rc": "1.0.1",
-    "sails": "~0.12.7",
-    "sails-disk": "~0.10.9"
+    "sails": "0.12.9",
+    "sails-disk": "0.10.9"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -33,5 +36,9 @@
     "url": "git://github.com/louis/sails.git"
   },
   "author": "louis",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "chai": "3.5.0",
+    "sails-hook-autoreload": "0.13.2"
+  }
 }
