--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "6.1.0",
     "rc": "1.0.1",
     "sails": "0.12.9",
-    "sails-disk": "0.10.9"
+    "sails-disk": "0.10.9",
+    "sails-postgresql": "^0.11.4"
   },
   "scripts": {
     "debug": "node debug app.js",
